# nifty-swing-screener

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
.agents/: AGENTS.md
.github/workflows/: keep-alive.yml
data/: dow30_fallback.csv  nasdaq100_fallback.csv  sp500_fallback.csv
src/swing/: config.py  main.py
src/swing/analysis/: levels.py  scorer.py  signals.py
src/swing/data/: cache.py  fetcher.py  nifty500.py  nifty_indices.py  us_stocks.py
src/swing/web/: app.py
src/swing/web/static/: app.js  index.html  style.css
